--- a/examples/notebooks/MusicGenExperiment.ipynb
+++ b/examples/notebooks/MusicGenExperiment.ipynb
@@ -2,32 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from audiocraft.models import MusicGen\n",
+    "# from audiocraft.data.audio import audio_write\n",
+    "\n",
+    "# model = MusicGen.get_pretrained(\"facebook/musicgen-small\")\n",
+    "# model.set_generation_params(duration=8)  # generate 8 seconds.\n",
+    "\n",
+    "# descriptions = [\"80s Billy Joel\", \"Vocal Jazz\"]\n",
+    "\n",
+    "# wav = model.generate(descriptions)  # generates 2 samples.\n",
+    "\n",
+    "# for idx, one_wav in enumerate(wav):\n",
+    "#     # Will save under {idx}.wav, with loudness normalization at -14 db LUFS.\n",
+    "#     audio_write(f'{idx}', one_wav.cpu(), model.sample_rate, strategy=\"loudness\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CLIPPING 0 happening with proba (a bit of clipping is okay): 1.1718750101863407e-05 maximum scale:  1.0149246454238892\n",
-      "CLIPPING 1 happening with proba (a bit of clipping is okay): 4.6875000407453626e-05 maximum scale:  1.0451520681381226\n"
+      "/home/hashem/.local/lib/python3.10/site-packages/torch/cuda/__init__.py:546: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n"
      ]
     }
    ],
    "source": [
-    "from audiocraft.models import MusicGen\n",
-    "from audiocraft.data.audio import audio_write\n",
-    "\n",
-    "model = MusicGen.get_pretrained(\"facebook/musicgen-small\")\n",
-    "model.set_generation_params(duration=8)  # generate 8 seconds.\n",
-    "\n",
-    "descriptions = [\"80s Billy Joel\", \"Vocal Jazz\"]\n",
-    "\n",
-    "wav = model.generate(descriptions)  # generates 2 samples.\n",
-    "\n",
-    "for idx, one_wav in enumerate(wav):\n",
-    "    # Will save under {idx}.wav, with loudness normalization at -14 db LUFS.\n",
-    "    audio_write(f'{idx}', one_wav.cpu(), model.sample_rate, strategy=\"loudness\")"
+    "from prompttools.experiment import MusicGenExperiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "MusicGenExperiment.__init__() missing 1 required positional argument: 'tta'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/hashem/Desktop/workspace/prompttools/examples/notebooks/MusicGenExperiment.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/hashem/Desktop/workspace/prompttools/examples/notebooks/MusicGenExperiment.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tta \u001b[39m=\u001b[39m MusicGenExperiment(prompt\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39m80s Rock n Roll\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m90s R&B\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: MusicGenExperiment.__init__() missing 1 required positional argument: 'tta'"
+     ]
+    }
+   ],
+   "source": [
+    "tta = MusicGenExperiment(tta=[\"facebook/musicgen-small\"], prompt=[\"80s Rock n Roll\", \"90s R&B\"])"
    ]
   }
  ],
