mv musicgen experiment to audio_experiments dir

--- a/examples/notebooks/audio_experiments/MusicGenExperiment.ipynb
+++ b/examples/notebooks/audio_experiments/MusicGenExperiment.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,23 +41,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tta = MusicGenExperiment(tta=[\"facebook/musicgen-small\"], prompt=[\"80s Rock n Roll\", \"90s R&B\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "MusicGenExperiment.__init__() missing 1 required positional argument: 'tta'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/hashem/Desktop/workspace/prompttools/examples/notebooks/MusicGenExperiment.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/hashem/Desktop/workspace/prompttools/examples/notebooks/MusicGenExperiment.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tta \u001b[39m=\u001b[39m MusicGenExperiment(prompt\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39m80s Rock n Roll\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m90s R&B\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: MusicGenExperiment.__init__() missing 1 required positional argument: 'tta'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'tta': ['facebook/musicgen-small'], 'prompt': ['80s Rock n Roll', '90s R&B']}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tta = MusicGenExperiment(tta=[\"facebook/musicgen-small\"], prompt=[\"80s Rock n Roll\", \"90s R&B\"])"
+    "tta.all_args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment = MusicGenExperiment(\n",
+    "    tta=[tta],\n",
+    "    prompt=\n",
+    ")"
    ]
   }
  ],
