--- a/examples/notebooks/MistralChatExperiment.ipynb
+++ b/examples/notebooks/MistralChatExperiment.ipynb
@@ -55,6 +55,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "155d2fcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mistralai.client import MistralClient\n",
+    "from mistralai.models.chat_completion import ChatMessage\n",
+    "\n",
+    "\n",
+    "api_key = os.environ[\"MISTRAL_API_KEY\"]\n",
+    "model = \"mistral-tiny\"\n",
+    "\n",
+    "client = MistralClient(api_key=api_key)\n",
+    "\n",
+    "messages = [\n",
+    "    ChatMessage(role=\"user\", content=\"What is the best French cheese?\")\n",
+    "]\n",
+    "\n",
+    "# No streaming\n",
+    "chat_response = client.chat(\n",
+    "    model=model,\n",
+    "    messages=messages,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b5f86d60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Determining the \"best\" French cheese is subjective as it depends on personal preferences. Some popular and highly regarded French cheeses include:\\n\\n1. Roquefort: A blue-veined cheese made from sheep\\'s milk. It is known for its strong, pungent, and tangy flavor.\\n2. Camembert: A soft, creamy cheese with a white rind and a rich, earthy taste. It is one of the most famous French cheeses.\\n3. Comté: A nutty, firm, and slightly sweet cheese made from unpasteurized cow\\'s milk. It is often compared to Swiss Emmenthal.\\n4. Brie de Meaux: A soft, creamy cheese with a white rind and a mild, buttery taste. It is considered the original Brie.\\n5. Munster: A smelly, soft, and runny cheese with a pungent aroma and a strong, savory flavor.\\n6. Reblochon: A soft, creamy cheese with a bloomy rind and a rich, milky, and slightly sweet taste.\\n7. Époisses: A strong-smelling, soft, and runny cheese with a pungent flavor and a velvety texture.\\n\\nEach of these cheeses has its unique characteristics and flavor profile, so it\\'s essential to try them to determine which one suits your taste preferences the best.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c8a211",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44170e69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -95,12 +159,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mistralai.models.chat_completion import ChatMessage\n",
+    "\n",
     "models = [\"mistral-tiny\"]\n",
     "messages = [\n",
-    "    [\n",
-    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
-    "    ]\n",
+    "    ChatMessage(role=\"system\", content=\"You are a helpful assistant.\"),\n",
+    "    ChatMessage(role=\"user\", content=\"Who was the first president?\"),\n",
     "]\n",
     "temperatures = [0.0, 1.0]\n",
     "# You can add more parameters that you'd like to test here.\n",
