--- a/examples/notebooks/MistralChatExperiment.ipynb
+++ b/examples/notebooks/MistralChatExperiment.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
@@ -53,70 +53,6 @@
     "\n",
     "os.environ[\"MISTRAL_API_KEY\"] = \"\"  # Insert your key here"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "155d2fcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mistralai.client import MistralClient\n",
-    "from mistralai.models.chat_completion import ChatMessage\n",
-    "\n",
-    "\n",
-    "api_key = os.environ[\"MISTRAL_API_KEY\"]\n",
-    "model = \"mistral-tiny\"\n",
-    "\n",
-    "client = MistralClient(api_key=api_key)\n",
-    "\n",
-    "messages = [\n",
-    "    ChatMessage(role=\"user\", content=\"What is the best French cheese?\")\n",
-    "]\n",
-    "\n",
-    "# No streaming\n",
-    "chat_response = client.chat(\n",
-    "    model=model,\n",
-    "    messages=messages,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b5f86d60",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Determining the \"best\" French cheese is subjective as it depends on personal preferences. Some popular and highly regarded French cheeses include:\\n\\n1. Roquefort: A blue-veined cheese made from sheep\\'s milk. It is known for its strong, pungent, and tangy flavor.\\n2. Camembert: A soft, creamy cheese with a white rind and a rich, earthy taste. It is one of the most famous French cheeses.\\n3. Comté: A nutty, firm, and slightly sweet cheese made from unpasteurized cow\\'s milk. It is often compared to Swiss Emmenthal.\\n4. Brie de Meaux: A soft, creamy cheese with a white rind and a mild, buttery taste. It is considered the original Brie.\\n5. Munster: A smelly, soft, and runny cheese with a pungent aroma and a strong, savory flavor.\\n6. Reblochon: A soft, creamy cheese with a bloomy rind and a rich, milky, and slightly sweet taste.\\n7. Époisses: A strong-smelling, soft, and runny cheese with a pungent flavor and a velvety texture.\\n\\nEach of these cheeses has its unique characteristics and flavor profile, so it\\'s essential to try them to determine which one suits your taste preferences the best.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chat_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4c8a211",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44170e69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -128,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "beaa70a1",
    "metadata": {},
    "outputs": [],
@@ -154,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "9114cfbf",
    "metadata": {},
    "outputs": [],
@@ -163,8 +99,10 @@
     "\n",
     "models = [\"mistral-tiny\"]\n",
     "messages = [\n",
-    "    ChatMessage(role=\"system\", content=\"You are a helpful assistant.\"),\n",
-    "    ChatMessage(role=\"user\", content=\"Who was the first president?\"),\n",
+    "    [ChatMessage(role=\"system\", content=\"You are a helpful assistant.\"),\n",
+    "     ChatMessage(role=\"user\", content=\"Who was the first president?\"),],\n",
+    "    [ChatMessage(role=\"system\", content=\"You are a helpful assistant. Keep your answer concise\"),\n",
+    "     ChatMessage(role=\"user\", content=\"Who was the second president?\"),],\n",
     "]\n",
     "temperatures = [0.0, 1.0]\n",
     "# You can add more parameters that you'd like to test here.\n",
@@ -182,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83b33130",
+   "execution_count": 12,
+   "id": "fbddc7fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "7598332b",
    "metadata": {},
    "outputs": [
@@ -217,85 +155,69 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>messages</th>\n",
        "      <th>temperature</th>\n",
+       "      <th>messages</th>\n",
        "      <th>response</th>\n",
-       "      <th>response_usage</th>\n",
        "      <th>latency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>gpt-3.5-turbo</td>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>George Washington</td>\n",
-       "      <td>{'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}</td>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>[role='system' content='You are a helpful assistant.', role='user' content='Who was the first president?']</td>\n",
+       "      <td>The first president of the United States was George Washington. He served two terms from April 30, 1789, to March 4, 1797. Washington played a crucial role in the founding of the United States and was unanimously chosen by the Electoral College to be the first president. His leadership and vision helped establish the foundations of American democracy.</td>\n",
+       "      <td>1.334489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>gpt-3.5-turbo</td>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>George Washington</td>\n",
-       "      <td>{'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}</td>\n",
-       "      <td>0.000005</td>\n",
+       "      <td>[role='system' content='You are a helpful assistant.', role='user' content='Who was the first president?']</td>\n",
+       "      <td>The first president of the United States was George Washington. He served two terms from April 30, 1789, to March 4, 1797. Washington played a crucial role in the founding of the United States and is often referred to as the \"Father of His Country.\" His leadership during the American Revolution and his commitment to upholding the Constitution helped establish a sense of national identity and unity.</td>\n",
+       "      <td>0.920111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>gpt-3.5-turbo-0613</td>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>George Washington</td>\n",
-       "      <td>{'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>[role='system' content='You are a helpful assistant. Keep your answer concise', role='user' content='Who was the second president?']</td>\n",
+       "      <td>The second president of the United States was John Adams, serving from 1797 to 1801. He succeeded George Washington and was followed by Thomas Jefferson. Adams is known for his role in the American Revolution and his diplomacy in Europe.</td>\n",
+       "      <td>0.628162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>gpt-3.5-turbo-0613</td>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>George Washington</td>\n",
-       "      <td>{'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>[role='system' content='You are a helpful assistant. Keep your answer concise', role='user' content='Who was the second president?']</td>\n",
+       "      <td>The second president of the United States was John Adams, serving from 1797 to 1801. He succeeded George Washington and was preceded by Thomas Jefferson. Adams was a Founding Father and a leading figure in the American Revolution.</td>\n",
+       "      <td>0.608941</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                model  \\\n",
-       "0  gpt-3.5-turbo        \n",
-       "1  gpt-3.5-turbo        \n",
-       "2  gpt-3.5-turbo-0613   \n",
-       "3  gpt-3.5-turbo-0613   \n",
+       "   temperature  \\\n",
+       "0  0.0           \n",
+       "1  1.0           \n",
+       "2  0.0           \n",
+       "3  1.0           \n",
        "\n",
-       "                                                                                                                       messages  \\\n",
-       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
-       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
-       "2  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
-       "3  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "                                                                                                                               messages  \\\n",
+       "0  [role='system' content='You are a helpful assistant.', role='user' content='Who was the first president?']                             \n",
+       "1  [role='system' content='You are a helpful assistant.', role='user' content='Who was the first president?']                             \n",
+       "2  [role='system' content='You are a helpful assistant. Keep your answer concise', role='user' content='Who was the second president?']   \n",
+       "3  [role='system' content='You are a helpful assistant. Keep your answer concise', role='user' content='Who was the second president?']   \n",
        "\n",
-       "   temperature           response  \\\n",
-       "0  0.0          George Washington   \n",
-       "1  1.0          George Washington   \n",
-       "2  0.0          George Washington   \n",
-       "3  1.0          George Washington   \n",
-       "\n",
-       "                                                       response_usage  \\\n",
-       "0  {'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}   \n",
-       "1  {'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}   \n",
-       "2  {'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}   \n",
-       "3  {'completion_tokens': 18, 'prompt_tokens': 57, 'total_tokens': 75}   \n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                            response  \\\n",
+       "0  The first president of the United States was George Washington. He served two terms from April 30, 1789, to March 4, 1797. Washington played a crucial role in the founding of the United States and was unanimously chosen by the Electoral College to be the first president. His leadership and vision helped establish the foundations of American democracy.                                                   \n",
+       "1  The first president of the United States was George Washington. He served two terms from April 30, 1789, to March 4, 1797. Washington played a crucial role in the founding of the United States and is often referred to as the \"Father of His Country.\" His leadership during the American Revolution and his commitment to upholding the Constitution helped establish a sense of national identity and unity.   \n",
+       "2  The second president of the United States was John Adams, serving from 1797 to 1801. He succeeded George Washington and was followed by Thomas Jefferson. Adams is known for his role in the American Revolution and his diplomacy in Europe.                                                                                                                                                                       \n",
+       "3  The second president of the United States was John Adams, serving from 1797 to 1801. He succeeded George Washington and was preceded by Thomas Jefferson. Adams was a Founding Father and a leading figure in the American Revolution.                                                                                                                                                                              \n",
        "\n",
        "    latency  \n",
-       "0  0.000006  \n",
-       "1  0.000005  \n",
-       "2  0.000003  \n",
-       "3  0.000002  "
+       "0  1.334489  \n",
+       "1  0.920111  \n",
+       "2  0.628162  \n",
+       "3  0.608941  "
       ]
      },
      "metadata": {},
@@ -319,9 +241,7 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "To evaluate the results, we'll define an eval function. We can use semantic distance to check if the model's response is similar to our expected output.\n",
-    "\n",
-    "Since we are using semantic similarity, you need to have the library `sentence_transformers` installed."
+    "We have many other examples of how you can evaluate the model's responses. Please reference the examples in the OpenAIChatExperiment notebook or AnthropicExperiment notebook."
    ]
   },
   {
