Expand logging example

--- a/examples/notebooks/remote/Logging.ipynb
+++ b/examples/notebooks/remote/Logging.ipynb
@@ -36,13 +36,20 @@
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# You can set your API Key\n",
+    "# You can set your API Key as such\n",
     "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
     "# os.environ[\"HEGELAI_API_KEY\"] = \"\"\n",
     "\n",
-    "# You can also import in from your .env file\n",
+    "# You can also import your keys in from your .env file\n",
     "dotenv_path = join(Path(os.getcwd()).parent.parent.parent, \".env\")  # \".../path_to_env/.env\"\n",
     "load_dotenv(dotenv_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following line of import enables you to start logging while using the normal OpenAI SDK."
    ]
   },
   {
@@ -52,6 +59,13 @@
    "outputs": [],
    "source": [
     "import prompttools.logger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Passing arguments with keyword is STRONGLY  recommended. Logging is done in the background without blocking your response."
    ]
   },
   {
@@ -76,6 +90,7 @@
     "    {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
     "]\n",
     "\n",
+    "# Passing arguments with keyword is STRONGLY  recommended\n",
     "response = openai.chat.completions.create(model=model, messages=messages)\n",
     "message = response.choices[0].message.content\n",
     "\n",
@@ -86,23 +101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logging with single client"
+    "### Logging with client instances"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prod\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -131,6 +131,27 @@
    "source": [
     "### Logging with single async client"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
