--- a/examples/notebooks/remote/Logging.ipynb
+++ b/examples/notebooks/remote/Logging.ipynb
@@ -105,11 +105,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You can also initialize the client instance with `openai.OpenAI`. Again, logging is done in the background without blocking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a test.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(\n",
+    "    # This is the default and can be omitted\n",
+    "    api_key=os.environ.get(\"OPENAI_API_KEY\"),\n",
+    ")\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"Say this is a test\",\n",
+    "        }\n",
+    "    ],\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    ")\n",
+    "\n",
+    "message = response.choices[0].message.content\n",
+    "print(message)"
+   ]
   },
   {
    "cell_type": "markdown",
