[PR-1] added pip install notebook to OpenAi Chat Experiment Example

--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pip install notebook\n",
     "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
